Basic offline audio rendering (just note on and off) and video mux